fix: Usar testDebugUnitTestCoverage para evitar pruebas instrumentadas
🎯 Solución Definitiva: Solo Pruebas Unitarias
- Cambiar createDebugUnitTestCoverageReport por testDebugUnitTestCoverage
- Evitar que jacocoTestCoverageVerification ejecute connectedDebugAndroidTest
- Actualizar ruta del artefacto a testDebugUnitTestCoverage/html
- Sin emulador: No más errores de 'No connected devices!'

El comando testDebugUnitTestCoverage jacocoTestCoverageVerification
ejecuta solo pruebas unitarias y verifica cobertura sin emulador.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,13 +26,14 @@ jobs:
       run: chmod +x gradlew
 
     - name: Run unit tests and check coverage threshold
-      # 1. Corre las pruebas y genera el reporte.
-      # 2. Ejecuta la verificación. Si es menor a 70%, este comando fallará.
-      run: ./gradlew createDebugUnitTestCoverageReport jacocoTestCoverageVerification
+      # ⬇️ ESTE ES EL COMANDO CORRECTO Y COMPLETO ⬇️
+      # 1. Ejecuta solo pruebas unitarias y crea el reporte.
+      # 2. Verifica si el reporte cumple el umbral del 70%.
+      run: ./gradlew testDebugUnitTestCoverage jacocoTestCoverageVerification
 
     - name: Upload coverage report as artifact
+      # Este paso es opcional, pero útil para ver el reporte detallado.
       uses: actions/upload-artifact@v4
       with:
-        name: unit-test-coverage-html
-        # Ruta del reporte generado por createDebugUnitTestCoverageReport
-        path: app/build/reports/coverage/test/debug
+        name: jacoco-html-report
+        path: app/build/reports/jacoco/testDebugUnitTestCoverage/html
