--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,15 +25,13 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
 
-    - name: Run unit tests and check coverage threshold
-      # ⬇️ ESTE ES EL COMANDO CORRECTO Y COMPLETO ⬇️
-      # 1. Ejecuta solo pruebas unitarias y crea el reporte.
-      # 2. Verifica si el reporte cumple el umbral del 70%.
-      run: ./gradlew testDebugUnitTestCoverage jacocoTestCoverageVerification
+    - name: Run unit tests, create report, and check coverage
+      # Ejecutamos las tres tareas necesarias en orden.
+      run: ./gradlew testDebugUnitTest createDebugUnitTestCoverageReport jacocoTestCoverageVerification
 
     - name: Upload coverage report as artifact
-      # Este paso es opcional, pero útil para ver el reporte detallado.
       uses: actions/upload-artifact@v4
       with:
         name: jacoco-html-report
-        path: app/build/reports/jacoco/testDebugUnitTestCoverage/html
+        # La tarea createDebugUnitTestCoverageReport genera este index.
+        path: app/build/reports/coverage/test/debug/index.html
