--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,7 +58,7 @@ jobs:
         with:
           api-level: 33
           target: google_apis
-          arch: x86_64
+          arch: arm64
           force-avd-creation: true
           emulator-options: "-no-window -no-audio"
           script: ./gradlew connectedDebugAndroidTest jacocoAndroidTestReport
