--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,9 +58,11 @@ jobs:
         with:
           api-level: 33
           target: google_apis
-          arch: arm64
-          force-avd-creation: true
-          emulator-options: "-no-window -no-audio"
+          arch: arm64-v8a       # ARM arch para Mac Silicon
+          force-avd-creation: false   # mejor reutilizar AVD si existe
+          ram-size: 4096M
+          emulator-options: -accel auto -no-snapshot-save -no-window -gpu auto -noaudio -no-boot-anim -camera-back none
+          disable-animations: true
           script: ./gradlew connectedDebugAndroidTest jacocoAndroidTestReport
 
       - name: Upload instrumented test coverage report
