--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,33 +7,6 @@ on:
     branches: [ "main", "feature/**" ]
 
 jobs:
-  unit-tests:
-    name: Run Unit Tests & Generate Coverage
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-          cache: gradle
-
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-
-      - name: Run unit tests and generate coverage reports
-        run: ./gradlew testDebugUnitTest jacocoTestReport jacocoTestCoverageVerification
-
-      - name: Upload unit test coverage report
-        uses: actions/upload-artifact@v4
-        with:
-          name: jacoco-html-report-unit-tests
-          path: app/build/reports/jacoco/jacocoTestReport/html
-
   instrumented-tests:
     name: Run Instrumented Tests & Generate Coverage
     runs-on: macos-latest
@@ -58,10 +31,10 @@ jobs:
         with:
           api-level: 33
           target: google_apis
-          arch: arm64-v8a       # ARM arch para Mac Silicon
-          force-avd-creation: false   # mejor reutilizar AVD si existe
+          arch: arm64-v8a
+          force-avd-creation: false
           ram-size: 4096M
-          emulator-options: -accel auto -no-snapshot-save -no-window -gpu auto -noaudio -no-boot-anim -camera-back none
+          emulator-options: "-accel auto -no-snapshot-save -no-window -gpu auto -noaudio -no-boot-anim -camera-back none"
           disable-animations: true
           script: ./gradlew connectedDebugAndroidTest jacocoAndroidTestReport
 
