--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDLjtkb9wf48fZk_BW9GMljYHX9UqqxrDg"/>
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.example.medisupplyapp.provider"
